
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int blankbuf ;


 int memset (char*,char,int) ;
 int write (int,...) ;

int
main(int argc, const char* argv[])
{
  unsigned char c;
  unsigned int i;
  unsigned short s;
  char blankbuf[1000];

  memset(blankbuf, '\0', sizeof(blankbuf));






  c = 0;
  write(1, &c, 1);

  c = 1;
  write(1, &c, 1);

  c = 0;
  write(1, &c, 1);

  c = 0;
  write(1, &c, 1);

  i = 0;
  write(1, &i, 4);



  c = 0;
  write(1, &c, 1);

  c = 2;
  write(1, &c, 1);

  c = 255;
  write(1, &c, 1);
  write(1, &c, 1);

  i = 8;
  write(1, &i, 4);



  c = 0;
  write(1, &c, 1);

  write(1, blankbuf, 7);





  s = 65535;
  write(1, &s, 2);


  write(1, blankbuf, 54);
}
